updated landing page

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>NeuerWEG</title>
-  <link rel="icon" href="data:;base64,iVBORw0KGgo=">
+
   <!-- Bootstrap -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
   
@@ -70,7 +70,9 @@
     <div class="row">
       <div class="col-lg-6">
         <h1>An efficient step by step routing for a journey that is more sustainable and cost effective.</h1>
-        <button type="button" class="btn btn-outline-light btn-lg download-button"><i class="fab fa-google-play"></i> Download</button>
+        <form action="https://www.figma.com/proto/pTRFIv4axsCdEb8mbC0Zch/Mobility-application---this-one?node-id=558%3A19&scaling=min-zoom">
+        <button type="submit" class="btn btn-outline-light btn-lg download-button" ><i class="fab fa-google-play"></i> Download</button>
+      </form>
       </div>
       <div class="col-lg-6">
         <img class="title-img" src="images/Pixel Mockup v1.png" alt="iphone-mockup">
@@ -159,7 +161,7 @@
       <form action="/" method="post" class="form-signin"> 
         <!-- <h1 class="h3 mb-3 fw-normal">Become a beta Tester</h1> -->
         
-        <input type="text" class="form-control top" name="firstName" placeholder="First Name" required autofocus>
+        <input type="text" class="form-control top" name="firstName" placeholder="First Name" required >
         <input type="text" class="form-control middle" name="lastName" placeholder="Last Name" required>
         <input type="email" class="form-control bottom" name="email" placeholder="Email" required>
     
@@ -175,8 +177,9 @@
   <section id="cta">
 
     <h3>Let us plan your travel as you prefer.</h3>
-    <button type="button" class="btn btn-light btn-lg download-button"><i class="fab fa-google-play"></i> Download</button>
-
+    <form action="https://www.figma.com/proto/pTRFIv4axsCdEb8mbC0Zch/Mobility-application---this-one?node-id=558%3A19&scaling=min-zoom">
+    <button type="submit" class="btn btn-light btn-lg download-button"><i class="fab fa-google-play"></i> Download</button>
+    </form>
   </section>
 
    <!-- the team -->
